--- a/src/layouts/components/Footer/index.module.scss
+++ b/src/layouts/components/Footer/index.module.scss
@@ -1,4 +1,57 @@
 .footer{
-    background-color: red;
-    padding: 100px;
+    color: #fff;
+}
+.footer__container {
+    padding: 60px 0px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__link {
+    color: #fff;
+
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0em;
+  
+}
+
+.footer__list__title {
+    color: #fff;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0em;
+    margin-bottom: 20px;
+
+}
+
+.footer__list {
+    margin-right: 30px;
+
+}
+
+.footer__item {
+    width: 130px;
+    margin-bottom: 17px;
+}
+
+.footer__connect__link {
+    margin-bottom: 16px;
+    line-height: 20px;
+    letter-spacing: 0em;
+    color: #fff;
+    display: block;
+    padding-left: 25px;
+    position: relative;
+}
+.footer__info{
+    width: 263px;
+line-height: 20px;
+letter-spacing: 0em;
+text-align: left;
+
+}
+.footer__span{
+    position: absolute;
+    left: 0;
 }
