--- a/src/layouts/components/Footer/index.module.scss
+++ b/src/layouts/components/Footer/index.module.scss
@@ -1,5 +1,9 @@
 .footer{
     color: #fff;
+    
+}
+.footer__gradient{
+    background: url(../../../img/infogr.png);
 }
 .footer__container {
     padding: 60px 0px;
@@ -13,6 +17,7 @@
     font-size: 12px;
     line-height: 15px;
     letter-spacing: 0em;
+    opacity: 0.7;
   
 }
 
