--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -41,3 +41,52 @@ h1,h2,h3,p{
   margin: 0;
   padding: 0;
 }
+.slick-next{
+  width: 52px;
+  height: 52px;
+  background: url(../img/partnext.png) !important;
+  
+  &:hover{
+    background: url(../img/partnext.png) ;
+  }
+  
+  
+ }
+.slick-prev{
+  width: 52px;
+  height: 52px;
+  background: url(../img/partnext.png) !important;
+  // transform: rotate(0deg 180deg);
+   top: -10px;
+    rotate: 180deg;
+  
+  &:hover{
+    background: url(../img/partnext.png) ;
+  }
+  
+}
+.slick-next,.slick-prev{
+  &::before{
+    display: none;
+
+  }
+}
+.slick-arrow{
+ 
+  width: 52px;
+  height: 52px;
+ 
+}
+.slick-disabled{
+  opacity: 0.5;
+}
+
+.slick-track{
+  display: flex;
+  align-items: center;
+  
+}
+.slick-list{
+  width: 90%;
+  margin: 0 auto;
+}
