--- a/css/globals.css
+++ b/css/globals.css
@@ -1,13 +1,56 @@
 @import url("https://fonts.cdnfonts.com/css/geometria");
+:root {
+  --color-brand--1: #c53720;
+  --color-brand--2: #1d1d1d;
+  --color-white: #ffffff;
+}
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "geometria", sans-serif;
+  max-width: 1600px;
+  margin: 0 auto;
 }
 
 .container {
-  max-width: 1140px;
+  max-width: 1400px;
   margin: 0 auto;
+}
+@media (max-width: 1400px) {
+  .container {
+    padding: 0 10rem;
+  }
+}
+@media (max-width: 1200px) {
+  .container {
+    padding: 0 6rem;
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    padding: 0 5rem;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    padding: 0 4rem;
+  }
+}
+@media (max-width: 576px) {
+  .container {
+    padding: 0 2rem;
+  }
 }
 
 ul,
@@ -28,17 +71,6 @@ ol {
   width: 1px;
 }
 
-body {
-  max-width: 1640px;
-  font-family: "Geometria";
-  margin: 0 auto;
-}
-
 a {
   text-decoration: none;
-}
-
-h1, h2, h3, p {
-  margin: 0;
-  padding: 0;
 }
