--- a/css/index.module.css
+++ b/css/index.module.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 50px;
+  margin-top: 30px;
 }
 
 .news__item {
@@ -16,7 +17,7 @@
   color: #fff;
   position: relative;
 }
-.news__item:hover::before, .news__item:first-child::before {
+.news__item:hover::before {
   width: 360px;
   height: 284px;
   position: absolute;
@@ -24,7 +25,7 @@
   background: url(../../../img/newsrec.png);
   top: 0;
 }
-.news__item:hover::after, .news__item:first-child::after {
+.news__item:hover::after {
   width: 168px;
   height: 74px;
   position: absolute;
@@ -44,7 +45,7 @@
 }
 
 .news__text {
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 20px;
   letter-spacing: 0em;
   margin: 20px;
