--- a/src/components/section/ServiceSection/index.module.scss
+++ b/src/components/section/ServiceSection/index.module.scss
@@ -2,6 +2,7 @@
     background: url(../../../img/servbg.png) no-repeat center center;
     background-size: cover;
     color: #fff;
+    margin-top: 80px;
 }
 
 .services__gradient {
