--- a/src/layouts/components/Footer/index.module.scss
+++ b/src/layouts/components/Footer/index.module.scss
@@ -1,10 +1,12 @@
-.footer{
+.footer {
     color: #fff;
-    
+
 }
-.footer__gradient{
+
+.footer__gradient {
     background: url(../../../img/infogr.png);
 }
+
 .footer__container {
     padding: 60px 0px;
     display: flex;
@@ -14,16 +16,16 @@
 .footer__link {
     color: #fff;
 
-    font-size: 12px;
+    font-size: 1.2rem;
     line-height: 15px;
     letter-spacing: 0em;
     opacity: 0.7;
-  
+
 }
 
 .footer__list__title {
     color: #fff;
-    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 20px;
     letter-spacing: 0em;
     margin-bottom: 20px;
@@ -49,14 +51,16 @@
     padding-left: 25px;
     position: relative;
 }
-.footer__info{
+
+.footer__info {
     width: 263px;
-line-height: 20px;
-letter-spacing: 0em;
-text-align: left;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left;
 
 }
-.footer__span{
+
+.footer__span {
     position: absolute;
     left: 0;
 }
