--- a/src/layouts/components/Navbar/index.module.scss
+++ b/src/layouts/components/Navbar/index.module.scss
@@ -23,6 +23,7 @@
 
 .header__item {
     margin-right: 15px;
+    position: relative;
 }
 
 .header__item__link {
@@ -30,7 +31,9 @@
     letter-spacing: 0em;
     color: #FFFFFF;
     font-size: 1.6rem;
-
+    background: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 .header__search__button {
