--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,4 @@
-@import url("https://fonts.cdnfonts.com/css/geometria");
-
+@import url("https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap");
 :root {
   --color-brand--1: #c53720;
   --color-brand--2: #1d1d1d;
@@ -18,7 +17,7 @@ html {
 }
 
 body {
-  font-family: "geometria", sans-serif;
+  font-family: "ABeeZee", sans-serif;
 }
 
 .container {
