--- a/src/components/Title/index.module.scss
+++ b/src/components/Title/index.module.scss
@@ -1,4 +1,6 @@
 .title {
+  display: flex;
+
   h1 {
     color: var(--color-brand--2);
     text-align: center;
@@ -7,15 +9,7 @@
     font-weight: 700;
     line-height: normal;
     text-transform: uppercase;
-    max-width: 800px;
-    margin: 0 auto;
-  }
-
-  .line {
-    width: 55%;
-    height: 4px;
-    margin: 0 auto;
-    background-color: var(--color-brand--1);
-    margin-top: 0.8rem;
+    width: max-content;
+    padding: 10px;
   }
 }
