--- a/css/globals.css
+++ b/css/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.cdnfonts.com/css/geometria");
+@import url("https://fonts.cdnfonts.com/css/abeezee");
 :root {
   --color-brand--1: #c53720;
   --color-brand--2: #1d1d1d;
@@ -73,4 +74,8 @@ ol {
 
 a {
   text-decoration: none;
+}
+
+button {
+  font-family: "Geometria";
 }
