--- a/src/layouts/components/Footer/index.module.scss
+++ b/src/layouts/components/Footer/index.module.scss
@@ -50,6 +50,7 @@
     display: block;
     padding-left: 25px;
     position: relative;
+    font-size: 1.6rem;
 }
 
 .footer__info {
@@ -57,6 +58,10 @@
     line-height: 20px;
     letter-spacing: 0em;
     text-align: left;
+    margin-top: 50px;
+    font-size: 1.6rem;
+    font-weight: 800;
+    line-height: 19px;
 
 }
 
