--- a/src/layouts/components/Navbar/index.module.scss
+++ b/src/layouts/components/Navbar/index.module.scss
@@ -1,7 +1,8 @@
 .header {
     background-color: #0E0E0E;
     padding: 20px 0px;
-    color: #fff
+    color: #fff;
+    position: relative;
 }
 
 .header__container {
