--- a/src/components/Subtitle/index.module.scss
+++ b/src/components/Subtitle/index.module.scss
@@ -1,10 +1,8 @@
-.subtitle {
-  font-size: 2.4rem;
-  text-align: center;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 2rem;
+.wrapper {
+  display: flex;
+  .subtitle {
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
 }
