--- a/src/components/section/Showcase/index.module.scss
+++ b/src/components/section/Showcase/index.module.scss
@@ -1,15 +1,14 @@
 .showcase-item {
-  height: calc(100vh - 107.5px);
+  height: calc(100vh - 100.5px);
   background-position: center;
   background-size: cover;
-  padding: 50px 250px;
-  h1 {
-    color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 3rem;
+  max-width: 500px;
 
-    font-size: 4.8rem;
-    font-style: italic;
-    font-weight: 400;
-    line-height: normal;
-    max-width: 570px;
+  img {
+    width: 26rem;
   }
 }
