--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&display=swap");
 :root {
   --color-brand--1: #c53720;
   --color-brand--2: #1d1d1d;
