--- a/src/components/section/Showcase/index.module.scss
+++ b/src/components/section/Showcase/index.module.scss
@@ -1,5 +1,5 @@
 .showcase-item {
-  height: calc(100vh - 100.5px);
+  height: 100vh;
   background-position: center;
   background-size: cover;
   display: flex;
