--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&display=swap");
-@import url("https://fonts.cdnfonts.com/css/geometria");
+//@import url("https://fonts.cdnfonts.com/css/geometria");
 @import url('https://fonts.cdnfonts.com/css/abeezee');
 
 
