I removed Material miui library,i added color to globals.css,i added link to button

--- a/css/globals.css
+++ b/css/globals.css
@@ -3,6 +3,8 @@
 :root {
   --color-brand--1: #c53720;
   --color-brand--2: #1d1d1d;
+  --color-brand--3: #2D2D2D;
+  --color-brand--4: #000000;
   --color-white: #ffffff;
 }
 
