--- a/src/components/Range/style.module.scss
+++ b/src/components/Range/style.module.scss
@@ -6,6 +6,8 @@
 .wrapper{
   width: 100%;
   min-height: 10rem;
+  background-color: transparent;
+  padding: 3.5rem 0;
 }
 header h2{
   font-size: 3.4rem;
@@ -19,7 +21,6 @@ header p{
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin: 3.5rem 0 3.5rem;
 }
 
 .price_input input{
@@ -44,6 +45,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 .slider{
   height: 0.5rem;
+  margin-top: 3.5rem;
   position: relative;
   background: var(--color-brand--1);
   border-radius: 0.5rem;
