--- a/src/components/section/CatalogMain/style.module.scss
+++ b/src/components/section/CatalogMain/style.module.scss
@@ -3,12 +3,12 @@
     height: auto;
     display: flex;
     flex-wrap: wrap;
+    align-content: start;
     .card{
         width: 30%;
         height: 360px;
         margin-left: 10px;
         margin-bottom: 10px;
-        // position: relative;
         .image_sector{
             width: 100%;
             height: 50%;
