--- a/src/layouts/components/Navbar/index.module.scss
+++ b/src/layouts/components/Navbar/index.module.scss
@@ -11,23 +11,22 @@
 
 .header__container {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+     align-items: center;
+     justify-content: space-between;
 }
 
 .header__nav {
-    margin-left: 30px;
-
+    margin-left: 32px;
+    display: flex;
+    align-items: center;
 }
 
 .header__list {
     display: flex;
-    margin-right: 10px;
-
 }
 
 .header__item {
-    margin-right: 15px;
+    margin-right: 28px;
     position: relative;
 }
 
@@ -48,7 +47,12 @@
     border: none;
     margin-right: 20px;
     cursor: pointer;
+    background: url(../../../img/lupa.svg) no-repeat center center;
 
+}
+.header__manage{
+    display: flex;
+    align-items:center;
 }
 
 .header__shop__button {
@@ -58,4 +62,25 @@
     border: none;
     cursor: pointer;
     margin-right: 10px;
+}
+@media only screen and (max-width:1115px){
+.header__item{
+    margin-right: 18px;
+}
+}
+@media only screen and (max-width:1070px){
+    .header__item{
+        margin-right: 18px;
+    }
+    .header__search__button{
+        width: 30px;
+        height: 30px;
+    }
+    .header__nav{
+        display: none;
+    }
+   .header__manage{
+    width: 150px;
+    justify-content: space-between;
+   }
 }
