i add contact and catalog-product page

--- a/src/pages/ContactsPage/index.module.scss
+++ b/src/pages/ContactsPage/index.module.scss
@@ -1,7 +1,16 @@
 .Contact_page{
-    padding: 3rem 0;
 }
 .contact_section{
     width: 100%;
+    padding: 5rem 0;
+}
+.contact_sector{
+    width: 100%;
+    min-height: 10rem;
+    background-color: aquamarine;
     display: flex;
+}
+.ask_section{
+    width: 100%;
+    background-size: cover;
 }
