--- a/src/pages/ProductsPage/style.module.scss
+++ b/src/pages/ProductsPage/style.module.scss
@@ -1,7 +1,7 @@
 .catalog_page{
     width: 100%;
     background-color: #EDEDED;
-    padding: 10px 0;
+    padding: 3rem 0;
 }
 .Main{
     display: flex;
