style: add responsibility

--- a/src/pages/AskQuestionPage/index.module.scss
+++ b/src/pages/AskQuestionPage/index.module.scss
@@ -5,6 +5,7 @@
 
   .wrapper--form {
     width: 875px;
+    box-shadow: 2px 2px 15px black;
     .wrapper--form__top {
       background-color: var(--color-brand--2);
       padding: 2rem 0;
