--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,8 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&display=swap");
 @import url("https://fonts.cdnfonts.com/css/geometria");
-@import url('https://fonts.cdnfonts.com/css/abeezee');
-
+@import url("https://fonts.cdnfonts.com/css/abeezee");
 
 :root {
   --color-brand--1: #c53720;
@@ -19,6 +18,16 @@
 
 html {
   font-size: 62.5%;
+
+  @media (max-width: 1200px) {
+    font-size: 62.5%;
+  }
+  @media (max-width: 992px) {
+    font-size: 46%;
+  }
+  @media (max-width: 768px) {
+    font-size: 31.25%;
+  }
 }
 
 body {
@@ -74,4 +83,4 @@ ol {
 
 a {
   text-decoration: none;
-} 
+}
