--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -45,7 +45,7 @@
 // spiper js
 
 .swiper-pagination-bullet {
-  width: 112px;
+  width: 11.2rem;
   height: 4px;
   border-radius: 0;
   opacity: 1;
