--- a/src/components/Range/style.module.scss
+++ b/src/components/Range/style.module.scss
@@ -20,7 +20,8 @@ header p{
 .price_input{
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .price_input input{
