--- a/src/components/FactoryCard/index.module.scss
+++ b/src/components/FactoryCard/index.module.scss
@@ -15,14 +15,16 @@
     }
     .des_sector{
         width: 100%;
-        height: 50%;
+        min-height: 25%;
         padding: 20px 10px;
         box-sizing: border-box;
         background-color: #1D1D1D;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         color: white;
         .info{
             width: 100%;
-            height: calc(100% - 3.3rem);
             .title{
                 height: 1.06rem;
                 line-height: 0;
@@ -30,8 +32,6 @@
                 margin: 0;
             }
             .describtion{   
-                height: calc(100% - 1.06rem);
-                overflow-y: hidden;
                 padding: 1rem 0;
             }
         }
@@ -39,7 +39,6 @@
             width: 100%;
             height: 3.3rem;
             display: flex;
-            align-items: center;
         }
     }
 }
