--- a/src/components/Search/index.module.scss
+++ b/src/components/Search/index.module.scss
@@ -15,6 +15,7 @@
 
 .search__form {
     width: 95%;
+    display: flex;
 }
 
 .search__input {
@@ -35,6 +36,7 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
+    margin-left: 10px;
 }
 
 .search__results {
