--- a/css/index.module.css
+++ b/css/index.module.css
@@ -1,13 +1,12 @@
-.showcase-item {
-  height: 100vh;
-  background-position: center;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 3rem;
-  max-width: 500px;
+.partners {
+  margin: 80px 0px;
 }
-.showcase-item img {
-  width: 26rem;
+
+.partners__wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.partners__item {
+  max-width: 100px;
 }
