--- a/css/slider.css
+++ b/css/slider.css
@@ -18,7 +18,8 @@
   background: url(../img/partnext.png);
 }
 
-.slick-next::before, .slick-prev::before {
+.slick-next::before,
+.slick-prev::before {
   display: none;
 }
 
@@ -37,6 +38,22 @@
 }
 
 .slick-list {
-  width: 90%;
+  max-width: 90%;
   margin: 0 auto;
+}
+
+.swiper-pagination-bullet {
+  width: 112px;
+  height: 4px;
+  border-radius: 0;
+  opacity: 1;
+  background-color: #fff;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: var(--color-brand--1);
+}
+
+.swiper-pagination {
+  margin-bottom: 5.8rem;
 }
