--- a/src/components/section/Advantages/index.module.scss
+++ b/src/components/section/Advantages/index.module.scss
@@ -17,6 +17,7 @@
   font-size: 1.6rem;
   text-align: center;
   position: relative;
+ 
 
   &::after {
     position: absolute;
@@ -31,6 +32,7 @@
   &:first-child {
     background: url(../../../img/advbg.png) no-repeat;
     background-size: auto;
+    flex-shrink: 0;
     &::after{
      
       background: url(../../../img/adv1.png) no-repeat;
@@ -61,4 +63,10 @@
     }
   }
 
+}
+@media only screen and (max-width:890px){
+  .advantages__list{
+    flex-direction: column;
+    align-items: center;
+  }
 }
