--- a/src/components/section/News/index.module.scss
+++ b/src/components/section/News/index.module.scss
@@ -6,13 +6,14 @@
 
 .news__list {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-wrap: wrap;
     margin-bottom: 50px;
     margin-top: 30px;
     
 }
 .news__container{
-    width: 1128px;
+    max-width: 1128px;
 }
 
 .news__item {
@@ -66,4 +67,7 @@
     bottom: 10px;
     right: 10px;
     cursor: pointer;
+}
+.news__button-wrapper{
+    text-align: center;
 }
