--- a/src/components/section/ServiceSection/index.module.scss
+++ b/src/components/section/ServiceSection/index.module.scss
@@ -2,50 +2,43 @@
     background: url(../../../img/servbg.png) no-repeat center center;
     background-size: cover;
     color: #fff;
-    margin-top: 80px;
+    margin-top: 8rem;
 }
 
 .services__gradient {
     background: url(../../../img/servgr.png) no-repeat center center;
     background-size: cover;
-    padding: 70px 0px;
+    padding: 7rem 0rem;
 }
 
 .services__list {
-    margin-top: 70px;
+    z-index: 2;
+    margin-top: 7rem;
     background: url(../../../img/servicebg.png) no-repeat center right;
     position: relative;
-    &::after{
+
+    &::after {
         position: absolute;
         width: 146px;
         height: 146px;
         content: '';
         background: url(../../../img/servaft.png) no-repeat center center;
-        right:30%;
+        right: 30%;
         bottom: 30px;
-    }
-    &::before{
-        position: absolute;
-        width: 166px;
-        height: 166px;
-        content: '';
-        background: url(../../../img/servbef.png) no-repeat center center;
-        background-size: contain;
-        right:-80px;
-        bottom: 40px;
-
+        z-index: -1;
     }
 }
 
 .services__item {
-    padding: 40px;
-    padding-left: 200px;
+    padding: 4rem;
+    padding-left: 20rem;
     position: relative;
 
     &:first-child {
         background: url(../../../img/servitem.png) no-repeat;
     }
-    &::after{
+
+    &::after {
         width: 124px;
         height: 120px;
         position: absolute;
@@ -54,7 +47,8 @@
         top: 40px;
         left: 50px;
     }
-    &::before{
+
+    &::before {
         width: 78px;
         height: 92px;
         position: absolute;
@@ -67,7 +61,7 @@
 }
 
 .services__item__title {
-    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 20px;
     letter-spacing: 0em;
     width: 286px;
@@ -75,9 +69,88 @@
 }
 
 .services__item__text {
-    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 20px;
     letter-spacing: 0em;
     width: 352px;
+
+}
+
+.services__button-wrapper {
+    margin-top: 40px;
+    text-align: center;
+}
+
+@media only screen and (max-width:1000px) {
+    .services__list {
+        position: relative;
+
+        &::before {
+            width: 70%;
+            height: 100%;
+            position: absolute;
+            content: '';
+            background-color: rgb(0, 0, 0, 0.6);
+            top: 0;
+            right: 0;
+            z-index: -1;
+            box-shadow: 0 0 3rem 2em rgb(0, 0, 0, 0.6),
+        }
+
+    }
+
+}
+
+@media only screen and (max-width:670px) {
+    .services__item {
+        padding: 2rem;
+        padding-left: 20rem;
+     
+        &::after {
+            top: 20px;
+          
+        }
+
+        &::before {
+            top: 30px;
+        }
+    }
+
+    .services__list {
+        background-size: contain;
+    }
+
+    .services__item__title {
+        width: auto;
+    }
+
+    .services__item__text {
+        width: auto;
+    }
+}
+@media only screen and (max-width:555px){
+
+    .services__item {
+        padding: 1.5rem;
+        padding-left: 13rem;
+
+        &::after {
+            width: 94px;
+            height: 87px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            left: 20px;
+            top: 30px;
+        }
+
+        &::before {
+            width: 74px;
+            height: 60px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            left: 35px;
+            top: 40px;
+        }
+    }
 
 }
