--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -38,7 +38,7 @@
   align-items: center;
 }
 .slick-list {
-  width: 90%;
+  max-width: 90%;
   margin: 0 auto;
 }
 
@@ -58,4 +58,17 @@
 
 .swiper-pagination {
   margin-bottom: 5.8rem;
+}
+.slick-slide{
+  text-align: center;
+}
+@media only screen and (max-width:600px){
+.slick-next{
+  margin-right: 15px;
+  
+}
+.slick-prev{
+  margin-left: 10px;
+}
+
 }
