--- a/src/components/section/BePartner/index.module.scss
+++ b/src/components/section/BePartner/index.module.scss
@@ -5,6 +5,7 @@
   padding: 4rem 0;
 }
 .wrapper {
+  background: var(--color-red);
   display: grid;
   grid-template-columns: 30rem 30rem 30rem;
   align-items: center;
