i fixed somthing problem

--- a/src/components/Produc/index.module.scss
+++ b/src/components/Produc/index.module.scss
@@ -1,3 +1,7 @@
+.product_section{
+    background: rgba(244, 244, 244, 1);
+    padding: 2rem 4rem;
+}
 .product_card{
     width: 100%;
     min-height: 16rem;
