--- a/src/pages/AskQuestionPage/index.module.scss
+++ b/src/pages/AskQuestionPage/index.module.scss
@@ -16,19 +16,19 @@
     padding: 2.4rem 4rem;
 
     .form--bottom {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-top: 4rem;
-      p {
-        color: var(--color-brand--1, #c53720);
-        text-align: right;
-        font-family: Abhaya Libre;
-        font-size: 1.6rem;
-        font-style: normal;
-        font-weight: 800;
-        line-height: normal;
-      }
+      // display: flex;
+      // align-items: center;
+      // justify-content: flex-end;
+      // margin-top: 4rem;
+      // p {
+      //   color: var(--color-brand--1, #c53720);
+      //   text-align: right;
+      //   font-family: Abhaya Libre;
+      //   font-size: 1.6rem;
+      //   font-style: normal;
+      //   font-weight: 800;
+      //   line-height: normal;
+      // }
     }
   }
 
