--- a/src/components/section/ServiceSection/index.module.scss
+++ b/src/components/section/ServiceSection/index.module.scss
@@ -28,7 +28,10 @@
         z-index: -1;
     }
 }
-
+.title_sector{
+    width: 60%;
+    margin: auto;
+}
 .services__item {
     padding: 4rem;
     padding-left: 20rem;
