--- a/src/components/section/ServiceSection/index.module.scss
+++ b/src/components/section/ServiceSection/index.module.scss
@@ -36,8 +36,7 @@
     padding: 4rem;
     padding-left: 20rem;
     position: relative;
-
-    &:first-child {
+    &:hover{
         background: url(../../../img/servitem.png) no-repeat;
     }
 
