--- a/src/layouts/components/Navbar/index.module.scss
+++ b/src/layouts/components/Navbar/index.module.scss
@@ -26,9 +26,10 @@
 }
 
 .header__item {
-    margin-right: 28px;
+    margin-right: 5rem;
+    min-width: 8rem;
     position: relative;
-}
+ }
 
 .header__item__link {
     line-height: 20px;
