--- a/src/components/Filter/style.module.scss
+++ b/src/components/Filter/style.module.scss
@@ -18,14 +18,14 @@
     align-items: center;
     cursor: pointer;
     &:hover{
-      background-color: #1D1D1D;
+      background-color: var(--color-brand--2);
     }
   }
   .active{
     background-color: var(--color-brand--2);
   }
   .not_active{
-    background-color: black;
+    background-color: var(--color-black);
   }
   .dropdown{
     background: url(../../img/dropaft.svg);
@@ -48,6 +48,7 @@
     .filter_title{
         width: 100%;
         padding: 1.5rem 1rem;
+        background-color: var(--color-black);
     }
     .btn_sector{
         width: 100%;
@@ -55,6 +56,7 @@
         display: flex;
         justify-content: center;
         gap: 2rem;
+        background-color: var(--color-black);
     }
     .input_sector{
         width: 100%;
