--- a/src/components/MenuList/style.module.scss
+++ b/src/components/MenuList/style.module.scss
@@ -9,6 +9,7 @@
 }
 .item{
   width: 100%;
+  background-color: var(--color-brand--4);
     a{
       color: inherit;
     }
@@ -21,14 +22,14 @@
   align-items: center;
   cursor: pointer;
   &:hover{
-    background-color: #1D1D1D;
+    background-color: var(--color-brand--3);
   }
 }
 .active{
-  background-color: var(--color-brand--2);
+  background-color: var(--color-brand--3);
 }
 .not_active{
-  background-color: black;
+  background-color: var(--color-black);
 }
 .dropdown{
   background: url(../../img/dropaft.svg);
