--- a/src/components/section/News/index.module.scss
+++ b/src/components/section/News/index.module.scss
@@ -71,3 +71,20 @@
 .news__button-wrapper{
     text-align: center;
 }
+.news_wrapper{
+    width: 100%;
+    font-size: 1.5rem;
+    img{
+        width: 100%;
+        height: 25rem;
+    }
+    .news_wrapper_date{
+        padding: 2rem 0;
+        color: var(--color-brand--1);
+        text-align: start;
+    }
+    .news_wrapper_desc{
+        text-align: start;
+        padding-bottom: 4rem;
+    }
+   }
