--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,6 +6,8 @@
 :root {
   --color-brand--1: #c53720;
   --color-brand--2: #1d1d1d;
+  --color-brand--3: #2D2D2D;
+  --color-black: #000000;
   --color-white: #ffffff;
   --color-red: "red";
 }
