hamburger:defects have been corrected

--- a/src/components/Button/index.module.scss
+++ b/src/components/Button/index.module.scss
@@ -1,4 +1,6 @@
+@import '../../styles/globals.scss';
 .button{
     text-align: center;
-    font-family: "ABeeZee",
+    display: block;
+    @include hover-effect
 }
