--- a/src/components/DropDown/index.module.scss
+++ b/src/components/DropDown/index.module.scss
@@ -1,14 +1,22 @@
 @import url('https://fonts.cdnfonts.com/css/ramabhadra');
-
+ @keyframes dropdown{
+    0%{
+        top: 0px;
+    }
+    100%{
+        top: 40px;
+    }
+ }
 
 .dropdown__list {
     position: absolute;
     top: 40px;
     z-index: 99;
-    background-color: rgb(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.9);
     min-width: 288px;
     padding: 10px 0px;
-
+    animation-name: dropdown;
+    animation-duration: 400ms;
     &::after {
         position: absolute;
         width: 94px;
@@ -21,14 +29,11 @@
 }
 
 .dropdown__item {
-
     border-bottom: 1px solid black;
-
 }
 
 .dropdown__link,.dropdown__button {
-    // КОМПАНИЯ
-
+    text-transform: uppercase;
     display: block;
     font-size: 1.2rem;
     padding: 15px 10px;
