--- a/src/components/section/Advantages/index.module.scss
+++ b/src/components/section/Advantages/index.module.scss
@@ -17,7 +17,12 @@
   font-size: 1.6rem;
   text-align: center;
   position: relative;
- 
+ &:hover{
+  background: url(../../../img/advbg.png) no-repeat;
+    background-size: auto;
+    flex-shrink: 0;
+    
+ }
 
   &::after {
     position: absolute;
@@ -30,11 +35,7 @@
   }
 
   &:first-child {
-    background: url(../../../img/advbg.png) no-repeat;
-    background-size: auto;
-    flex-shrink: 0;
     &::after{
-     
       background: url(../../../img/adv1.png) no-repeat;
     }
   }
