--- a/src/components/section/Directory/index.module.scss
+++ b/src/components/section/Directory/index.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
   padding: 4rem;
+  background: url(../../../img/directory-bg.png);
 }
 
 .directory {
@@ -8,6 +9,7 @@
   align-items: center;
   justify-content: center;
   gap: 2.4rem;
+  
   max-width: 1000px;
   margin: auto;
   padding: 3rem 0;
