--- a/src/components/Button/index.module.scss
+++ b/src/components/Button/index.module.scss
@@ -1,6 +1,24 @@
 @import '../../styles/globals.scss';
+@import url('https://fonts.cdnfonts.com/css/abeezee');
+
+.button {
+    padding: 1rem 2.5rem;
+    font-size: 1.3rem;
+    font-style: italic;
+    font-weight: 400;
+    text-transform: uppercase;
+    border: 3px solid rgba(197, 55, 32, 1);
+    display: inline-block;
+    text-decoration: none;
+    background-color: transparent;
+    cursor: pointer;
+    font-family: 'Inter';
+    @include hover-effect;
+    flex-shrink: 0;
+}
+@media only screen and (max-width:1000px){
 .button{
-    text-align: center;
-    display: block;
-    @include hover-effect
+    padding: 0.8rem 2.2rem;
+    font-size: 1.1rem;
+}
 }
