--- a/src/components/DropDown/index.module.scss
+++ b/src/components/DropDown/index.module.scss
@@ -35,6 +35,7 @@
 .dropdown__link,.dropdown__button {
     text-transform: uppercase;
     display: block;
+    position: relative;
     font-size: 1.2rem;
     padding: 15px 10px;
     color: #fff;
@@ -73,3 +74,4 @@
         top: 12px;
     }
 }
+
