--- a/src/components/section/Info/index.module.scss
+++ b/src/components/section/Info/index.module.scss
@@ -17,16 +17,26 @@
     //justify-content: space-between;
     align-items: flex-start;
     margin-top: 100px;
+    
 }
 
 .info__img__wrapper {
+    background: url(../../../img/info-per.jpg) no-repeat;
     width: 360px;
     height: 347px;
-    margin-right: 20px;
+    margin-right: 24px;
     flex-shrink: 0;
-
     position: relative;
-
+    clip-path: polygon(0 26.3%,
+    25.7% 0,
+    100% 0,
+    100% 100%,
+    100% 73%,
+    74% 100%,
+    10% 100%,
+    0% 100%,
+    0% 0%);
+    z-index: 3;
     &::after {
         position: absolute;
         width: 100%;
@@ -35,37 +45,15 @@
         background: url(../../../img/info-rec.png);
         z-index: 2;
     }
-
-    &::before {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        content: '';
-        background: url(../../../img/info-per.jpg);
-        z-index: 0;
-        clip-path: polygon(0 27%,
-                27% 0,
-                100% 0,
-                100% 100%,
-                100% 73%,
-                73% 100%,
-                10% 100%,
-                0% 100%,
-                0% 0%)
-    }
 }
 
-.info__text__wrapper {
-    max-width: 744px;
-}
-
-.info__text__wrapper {
-    background: url(../../../img//infogr.png) no-repeat;
-    border: 4px #C53720 solid;
+.info__text-wrapper {
+   background: rgba(29, 29, 29, 0.6);
+   border: 4px #C53720 solid;
 }
 
 .info__text {
-    padding: 30px;
+    padding: 2rem;
     font-size: 1.6rem;
     line-height: 20px;
     letter-spacing: 0em;
@@ -76,12 +64,35 @@
     margin-left: 30px;
     padding-bottom: 3rem;
 }
+.info__recwrapper{
+    margin-top: 24px;
+    display: flex;
 
-@media only screen and (max-width:800px) {
+}
+.info__reclist{
+    flex-shrink: 0;
+    margin-left: 3rem;
+    display: flex;
+    flex-direction: column;
+}
+.info__rectext{
+    font-size: 1.6rem;
+    text-align: center;
+}
+.info__item{
+    text-align: center;
+    margin-bottom: 36px;
+    &:nth-child(2){
+        color: #C53720;
+    }
+}
+
+@media only screen and (max-width:1000px) {
     .info__wrapper {
         flex-direction: column;
+        align-items: center;
     }
-
+    
     .info__img__wrapper {
         margin: 0 auto;
         margin-bottom: 20px;
@@ -93,5 +104,19 @@
 
     .info__button-wrapper {
         text-align: center;
+    }
+}
+@media only screen and (max-width:650px){
+    .info__recwrapper{
+        flex-direction: column;
+    }
+    .info__reclist{
+        flex-direction: row;
+        margin: 20px auto;
+        align-items: center;
+    }
+    .info__item{
+        margin-left: 24px;
+        
     }
 }
