--- a/src/components/section/Partners/index.module.scss
+++ b/src/components/section/Partners/index.module.scss
@@ -1,12 +1,93 @@
-.partners{
+.partners {
     margin: 80px 0px;
-  
+
 }
-.partners__wrapper{
+
+.partners__wrapper {
     display: flex;
     align-items: center;
 }
-.partners__item{
-    max-width:100px;
+
+.partners__item {
     text-align: center;
+    color: #1D1D1D;
+}
+
+.partners__item-element-text {
+    color: #1D1D1D;
+    font-size: 16px;
+    font-weight: 800;
+    word-wrap: break-word;
+    max-width: 840px;
+    display: block;
+    margin-top: 4.4rem;
+    padding-bottom: 2.4rem;
+    position: relative;
+
+    &::after {
+        position: absolute;
+        width: 190px;
+        height: 4px;
+        content: '';
+        bottom: 0;
+        left: calc(50% - 95px);
+        background-color: rgba(197, 55, 32, 1);
+    }
+}
+
+.partners__item-element {
+    text-align: center;
+    display: block;
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+.partners__item-img {
+    display: inline-block;
+    margin: 0 auto;
+}
+
+.partners__item-element-name {
+    font-size: 1.6rem;
+    font-style: italic;
+    font-weight: 400;
+    word-wrap: break-word;
+    margin-top: 20px;
+}
+
+.partners__item-element-info {
+    font-size: 1.6rem;
+    font-weight: 800;
+    word-wrap: break-word;
+    margin-top: 8px;
+}
+.partners__img-wrapper{
+    display: inline-block;
+    position: relative;
+    &::after {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        content: '';
+        background: url(../../../img/reviews-img-bg.png);
+        z-index: 2;
+    }
+}
+.partners__img{
+    display: block;
+    margin:  0 auto;
+    flex-shrink: 0;
+    clip-path: polygon(0 26.3%,
+    25.7% 0,
+    100% 0,
+    100% 100%,
+    100% 73%,
+    74% 100%,
+    10% 100%,
+    0% 100%,
+    0% 0%);
+    z-index: 3;
+   
 }
