--- a/src/layouts/components/Navbar/index.module.scss
+++ b/src/layouts/components/Navbar/index.module.scss
@@ -18,6 +18,7 @@
     top: 0;
     z-index: 99;
     width: 100%;
+    max-width: 1640px;
 }
 
 .header__container {
@@ -27,7 +28,6 @@
 }
 
 .header__nav {
-    margin-left: 32px;
     display: flex;
     align-items: center;
 }
@@ -79,13 +79,16 @@
     margin-right: 10px;
 }
 
-@media only screen and (max-width:1115px) {
+@media only screen and (max-width:1155px) {
     .header__item {
         margin-right: 18px;
     }
+    .header__item__link{
+        font-size: 1.2rem;
+    }
 }
 
-@media only screen and (max-width:1070px) {
+@media only screen and (max-width:870px) {
     .header__item {
         margin-right: 18px;
     }
