--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,40 +20,45 @@
 
 html {
   font-size: 62.5%;
+  
 }
 
 body {
   font-family: "Inter", sans-serif;
+  max-width: 1640px;
+  margin: 0 auto;
 }
 
 .container {
-  max-width: 1600px;
-  padding: 0 10rem;
+  max-width: 1328px;
+  padding: 0 15px;
   margin: 0 auto;
 
+  
+
   // XX-Large devices (larger desktops, 1400px and up)
-  @media (max-width: 1400px) {
-    padding: 0 10rem;
-  }
+  // @media (max-width: 1400px) {
+  //   padding: 0 10rem;
+  // }
 
-  // X-Large devices (large desktops, 1200px and up)
-  @media (max-width: 1200px) {
-    padding: 0 6rem;
-  }
+  // // X-Large devices (large desktops, 1200px and up)
+  // @media (max-width: 1200px) {
+  //   padding: 0 6rem;
+  // }
 
-  // Large devices (desktops, 992px and up)
-  @media (max-width: 992px) {
-    padding: 0 5rem;
-  }
+  // // Large devices (desktops, 992px and up)
+  // @media (max-width: 992px) {
+  //   padding: 0 5rem;
+  // }
 
-  // Medium devices (tablets, 768px and up)
-  @media (max-width: 768px) {
-    padding: 0 4rem;
-  }
+  // // Medium devices (tablets, 768px and up)
+  // @media (max-width: 768px) {
+  //   padding: 0 4rem;
+  // }
 
-  @media (max-width: 576px) {
-    padding: 0 2rem;
-  }
+  // @media (max-width: 576px) {
+  //   padding: 0 2rem;
+  // }
 }
 
 @mixin hover-effect {
