--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -2,7 +2,7 @@
   width: 52px;
   height: 52px;
   background: url(../img/partnext.png) !important;
-
+  
   &:hover {
     background: url(../img/partnext.png);
   }
@@ -11,10 +11,8 @@
   width: 52px;
   height: 52px;
   background: url(../img/partnext.png) !important;
-  // transform: rotate(0deg 180deg);
-  top: -10px;
-  rotate: 180deg;
-
+  transform: rotate(180deg);
+  transform-origin: 43% 21%;
   &:hover {
     background: url(../img/partnext.png);
   }
@@ -41,7 +39,14 @@
   max-width: 90%;
   margin: 0 auto;
 }
-
+.slick-slider{
+  display: flex;
+}
+.slick-initialized{
+  //position: relative;
+  display: flex;
+  //align-items: center;
+}
 // spiper js
 
 .swiper-pagination-bullet {
